# my-personal-examiner

./: .gitignore  BETTER_AUTH_SETUP.md  CLAUDE.md  README.md  SESSION_FIXES_2026-01-05.md  TESTING_GUIDE.md  vercel.json
api/: index.py  test.py  (+1 more)
backend/: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_5_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  SQLMODEL_BUG_FIX.md  TESTING_AND_VISUALIZATION.md  TEST_FIX_SUMMARY.md  pyproject.toml
backend/.specify/memory/: constitution.md
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_questions_and_subject_config.py  002b_add_attempts_and_attempted_questions.py  003_add_coaching_sessions.py  004_add_study_plans.py  005_add_improvement_plans.py  006_enhance_attempted_questions_confidence.py  007_add_saved_explanations.py  008_refactor_saved_explanations_pointer.py  009_add_resource_bank_tables.py  010_add_resource_tables.py  011_add_resource_indexes.py  012_fix_admin_resources_visibility.py  013_add_admin_setup_fields.py  014_add_academic_level_hierarchy.py  1322c004525c_merge_admin_fix_and_metadata_rename.py  4ac52e7be851_merge_phase_ii_and_phase_iii_migrations.py  70253d04973d_add_mark_schemes_and_update_questions.py  7b8e00fbe2d1_merge_heads_before_resource_bank.py  9df5059c0d52_rename_metadata_to_resource_metadata.py
backend/api/: index.py
backend/history/adr/: 005-minimal-mark-scheme-extraction.md  007-search-filtering-strategy.md  009-syllabus-tagging-strategy.md
backend/scripts/: backup_before_hierarchy.sh  check_all_resources.py  check_indexes.py  check_pending_admin_resources.py  check_pending_simple.py  check_student_admin_status.py  clear_explanations.sql  clear_localstorage.js  debug_exam_generation.py  debug_search.py  seed_academic_levels.py  seed_economics_config.py  seed_economics_syllabus.py  seed_sample_questions.py  test_db_speed.py  test_exam_api.py  validate_all_endpoints.sh  verify_clamav.py
backend/src/: config.py  database.py  main.py
backend/src/ai_integration/: __init__.py  anthropic_client.py  gemini_client.py  llm_fallback.py  openai_client.py
backend/src/algorithms/: __init__.py  confidence_scoring.py  contextual_interleaving.py  supermemo2.py
backend/src/middleware/: __init__.py  admin_auth.py  resource_permission.py
backend/src/models/: __init__.py  academic_level.py  attempt.py  attempted_question.py  coaching_session.py  enums.py  exam.py  explanation_resource_usage.py  generated_explanation.py  improvement_plan.py  mark_scheme.py  question.py  resource.py  saved_explanation.py  student.py  student_learning_path.py  student_llm_config.py  student_resource_preference.py  study_plan.py  subject.py  syllabus.py  syllabus_point.py  syllabus_point_resource.py
backend/src/question_extractors/: __init__.py  cambridge_parser.py  extraction_patterns.py  generic_extractor.py  mark_scheme_extractor.py
backend/src/routes/: academic_levels.py  admin_resources.py  admin_setup.py  auth.py  auth_extra.py  coaching.py  exams.py  feedback.py  marking.py  metrics.py  planning.py  questions.py  resource_sync.py  resource_tagging.py  resources.py  subjects.py  syllabus.py  teaching.py
backend/tests/: conftest.py
(+445 files in other folders)
